# lojban_parser

./: .gitignore  CmavoList.hs  Lexer.hs  LexerPappy.pappy  Parse.hs  Preprocess.hs  README  TestPappy.pappy  fromOfficial.hs  laLojbanMo.txt  leCmaluNotru.txt  loLunraCuCuskuLoMiCinmo.txt  lojban.peg  lojbanParser-0.0.1.ebuild  lojbanParser.cabal  lojban_original.peg  lojban_parser.cabal  memo  sample.txt  test.hs  testPappy.hs  test_frisby.hs  todo
Language/Lojban/: Parser.hs
olds/: Lexer.hs  Parser.hs
olds/old_src/: CmavoList.hs  fromOfficial.hs  test.hs  test_frisby.hs
peg/: lojban.peg  zasni_gerna.peg
slabu_gerna/: lojbanParser.cabal
slabu_gerna/src/: Preprocess.hs  TestPappy.pappy
slabu_gerna/src/Language/Lojban/: Parser.hs
src/: Preprocess.hs  TestPappy.pappy
src/Language/Lojban/: Parser.hs
tools/: MkCMAVO.pappy  rmComment.hs
txts/: laLojbanMo.txt
