build-type:	Simple
cabal-version:	>= 1.6

name:		lojbanParser
version:	0.0.1
author:		iocikun.jujon <PAF01143@nifty.ne.jp>
maintainer:	iocikun.jujon <PAF01143@nifty.ne.jp>

license:	BSD3
license-file:	LICENSE

category:	Natural Language Processing
synopsis:	lojban parser
description:	lojban parser

source-repository head
    type:	git
    location:	git://github.com/YoshikuniJujo/lojban_parser.git

executable testLojbanParser
    hs-source-dirs:	./
    main-is:		test.hs
    build-depends:	base >= 3 && < 5, peggy >= 0.3.1
