build-type:	Simple
cabal-version:	>= 1.8

name:		lojbanParser
version:	0.1.9.1
stability:	experimental
author:		.iocikun.juj. <PAF01143@nifty.ne.jp>
maintainer:	.iocikun.juj. <PAF01143@nifty.ne.jp>

license:	BSD3
license-file:	LICENSE

category:	Language
synopsis:	lojban parser
description:
  This is alpha version. The interface may change.

source-repository	head
  type:		git
  location:	git://github.com/YoshikuniJujo/lojban_parser.git

library
    hs-source-dirs:	src
    extensions:		DeriveDataTypeable
    exposed-modules:	Language.Lojban.Parser
    other-modules: Preprocess LexerPappy Pos Parse TestPappy
    build-depends:	base > 3 && < 5

executable	testParser
    hs-source-dirs:	bin
    extensions:		DeriveDataTypeable
    main-is:		testParser.hs
    build-depends:	base > 3 && < 5, lojbanParser
